[package]
name = "py-rust-odbc-csv"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_rust_odbc_csv"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
odbc-api = "4.0.1"
#odbc-iter = "0.2.7"
lazy_static = "*"
csv = "1.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
